PLZ-194 fix height avatar on safari, fix posts

--- a/frontend/src/styles/components/ProfileHeader.scss
+++ b/frontend/src/styles/components/ProfileHeader.scss
@@ -5,6 +5,10 @@
     }
 }
 
+.plz-profile-header {
+    height: max-content !important;
+}
+
 .user-avatar-file-label {
     position: absolute;
     top: 0;
